HelloWorld/force-app/main/default/objects/Invoice__c/fields/Hospital_Email__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Email__c</fullName>
    <formula>Hospital__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Email</label>
    <type>Text</type>
</CustomField>